thrift/src/test/resources/inspections/duplicates/topLevelDeclaration/exception.thrift
exception A {}
senum <error descr="multiple declarations 'A'">A</error> {}

senum B {}
exception <error descr="multiple declarations 'B'">B</error> {}